--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>The Curious Amateur</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
 </head>
 <body>
-    
+ 
+    <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="Assets\Images\thrilledwoman.jpg" alt="Woman's Face">
+    <h1 class="text-5xl text-center shadow-md font-bold text-clifford">Let's Learn A Skill!</h1>
+    <div class="text-center space-y-2 sm:text-left">
+    <img src="Assets\Images\hiring-employees-1024x683.jpg" alt="" class="absolute opacity-40 inset-0 w-full h-full object-cover" loading="lazy" />
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
+ 
     <script src="/Assets/JavaScript/script.js"></script>
 </body>
 </html>
