--- a/index.html
+++ b/index.html
@@ -4,30 +4,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.tailwindcss.com">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>The Curious Amateur</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+    <style>
+      .center {
+        display: block;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
 </head>
-<body>
- 
-    <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="Assets\Images\thrilledwoman.jpg" alt="Woman's Face">
-    <h1 class="text-5xl text-center shadow-md font-bold text-clifford">Let's Learn A Skill!</h1>
-    <div class="text-center space-y-2 sm:text-left">
-    <img src="Assets\Images\hiring-employees-1024x683.jpg" alt="" class="absolute opacity-40 inset-0 w-full h-full object-cover" loading="lazy" />
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
- 
-    <script src="/Assets/JavaScript/script.js"></script>
+<body> 
+<section class="hero is-small has-background-black">
+	<div class="hero-body">
+    <div class="container1">
+      <figure class="image is-128x128">
+        <img class= "hero-logo is-rounded" src="./Assets/Images/dazedduck.gif">
+        <h1 class="team">The Cosmic Ducks Presents:</h1>     
+      </figure>
+      </div>
+    </div>
+</section>
+      <section class="section ">
+          <div class="container2">
+             <div class="columns">
+                <div class="column">
+                    <div class="notification is-grey-darker">
+                      <h2 class="title"></h2>
+                      <p class="is-size-4">
+                     Quick Search:
+                     <div class="field has-addons">
+                      <div class="control">
+                        <input class="input" type="text" placeholder="enter your keywords">
+                      </div>
+                      <div class="control">
+                        <a class="button is-info">
+                          Search
+                        </a>
+                      </div>
+                    </div>
+                  </p>
+                    </div>
+                  </div>
+                  <div class="column">
+                      <div class="notification is-primary">
+                        <p class="is-size-2-">
+                          YouTube Summons You
+                          <figure class="image is-16by9">
+                            <iframe class="has-ratio" width="640" height="360" src="https://www.youtube.com/embed/YE7VzlLtp-4" frameborder="0" allowfullscreen></iframe>
+                          </figure>
+                      </div>
+                    </div>
+                  <div class="column">                    
+                    <div class="notification is-info">
+                      <p class="is-size-2">
+                      Wikipedia Info Box
+                      <div class="card">
+                        <div class="card-content">
+                          <p class="title">
+                            “There are two hard things in computer science: cache invalidation, naming things, and off-by-one errors.”
+                          </p>
+                          <p class="subtitle">
+                            Jeff Atwood
+                          </p>
+                        </div>
+                        <footer class="card-footer">
+                          <p class="card-footer-item">
+                            <span>
+                              View on <a href="https://twitter.com/codinghorror/status/506010907021828096">Twitter</a>
+                            </span>
+                          </p>
+                          <p class="card-footer-item">
+                            <span>
+                              Share on <a href="#">Facebook</a>
+                            </span>
+                          </p>
+                        </footer>
+                  </div>
+                  </div>
+                </div>
+	          </div>
+</section>
+<script src="/Assets/JavaScript/script.js"></script>
 </body>
-</html>
+</html> 
