--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>The Curious Amateur</title>
 </head>
 <body>
-    
+    <div id = "search-box">
+        <h3>Search for a topic you'd like to learn about: </h3>
+        <br>
+        <br>
+        <div>
+          <input id = "searchInput" type="text"  placeholder="Search" label="Search term">
+          <button type="submit" class="btn">Submit</button>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./Assets/JavaScript/script.js"></script>
 </body>
