--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                      Quick Search:
                      <div class="field has-addons">
                       <div class="control">
-                        <input class="input" type="text" placeholder="enter your keywords">
+                        <input class="input" type="text" id = "searchInput" placeholder="enter your keywords">
                       </div>
                       <div class="control">
-                        <a class="button is-info">
+                        <a class="button is-info" id = "search-btn">
                           Search
                         </a>
                       </div>
@@ -53,7 +53,7 @@
                         <p class="is-size-2-">
                           YouTube Summons You
                           <figure class="image is-16by9">
-                            <iframe class="has-ratio" width="640" height="360" src="https://www.youtube.com/embed/YE7VzlLtp-4" frameborder="0" allowfullscreen></iframe>
+                            
                           </figure>
                       </div>
                     </div>
