added a single poorly defined var

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       <div class="notification is-primary">
                         <p class="is-size-2-">
                           YouTube Summons You
-                          <figure class="image is-16by9">
+                          <figure class="image is-16by9" id="youtube-video">
                             
                           </figure>
                       </div>
