changed color on search background and left hero with blk bkgrnd

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>The Curious Amateur</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
-    <style>
+    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma-rtl.css" integrity="sha512-I6081wbkOhUzrW0pbGj2RxCnnCVqUDxQQE/PZq1WmvRSPlZ/2p6h1XbEnhFH4IqF759e10t+IuHjcs0ZYx9NWA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+   <style>
       .center {
         display: block;
         justify-content: center;
@@ -21,8 +22,8 @@
 	<div class="hero-body">
     <div class="container1">
       <figure class="image is-128x128">
+        <h1 class="team">The Cosmic Ducks Presents:</h1> 
         <img class= "hero-logo is-rounded" src="./Assets/Images/dazedduck.gif">
-        <h1 class="team">The Cosmic Ducks Presents:</h1>     
       </figure>
       </div>
     </div>
@@ -31,7 +32,7 @@
           <div class="container2">
              <div class="columns">
                 <div class="column">
-                    <div class="notification is-grey-darker">
+                    <div class="notification is-danger">
                       <h2 class="title"></h2>
                       <p class="is-size-4">
                      Quick Search:
@@ -50,7 +51,7 @@
                   </div>
                   <div class="column">
                       <div class="notification is-primary">
-                        <p class="is-size-2-">
+                        <p class="is-size-4">
                           YouTube Summons You
                           <figure class="image is-16by9">
                             
