created space for search storage buttons in html, set up functions in js to create buttons for each search history button, and set event listener to generate a new search when those buttons are clicked

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                       </div>
                     </div>
                   </p>
+                  <!-- this is where I am putting history buttons for now, not styled at all -->
+                    <div id = "search-history-box">  </div>
                     </div>
                   </div>
                   <div class="column">
