--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                   </div>
                   <div class="column">
                       <div class="notification is-primary">
-                        <p class="is-size-2-">
-                          YouTube Summons You
+                        <p class="is-size-4">YouTube Summons You</p>
                           <figure class="image is-16by9" id="youtube-video">
                             
                           </figure>
