--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://cdn.tailwindcss.com">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>The Curious Amateur</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">  
     <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma-rtl.css" integrity="sha512-I6081wbkOhUzrW0pbGj2RxCnnCVqUDxQQE/PZq1WmvRSPlZ/2p6h1XbEnhFH4IqF759e10t+IuHjcs0ZYx9NWA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src=
+"https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
    <style>
       .center {
         display: block;
@@ -21,18 +23,18 @@
 <section class="hero is-small has-background-black">
 	<div class="hero-body">
     <div class="container1">
-      <figure class="image is-128x128">
+      <figure id="banner" class="image is-128x128">
         <h1 class="team">The Cosmic Ducks Presents:</h1> 
         <img class= "hero-logo is-rounded" src="./Assets/Images/dazedduck.gif">
       </figure>
       </div>
     </div>
 </section>
-      <section class="section ">
+      <section class="section has-background-light">
           <div class="container2">
              <div class="columns">
                 <div class="column">
-                    <div class="notification is-danger">
+                    <div class="notification is-dark">
                       <h2 class="title"></h2>
                       <p class="is-size-4">
                      Quick Search:
@@ -48,12 +50,19 @@
                     </div>
                   </p>
                   <!-- this is where I am putting history buttons for now, not styled at all -->
-                    <div id = "search-history-box">  </div>
+                  <div class="select">
+                    <select class="is-focused">
+                      <option>Select From Your History</option>
+                      <option>With options</option>
+                    </select>
+                  </div>
+                    <div id = "search-history-box">  
+                    </div>
                     </div>
                   </div>
                   <div class="column">
                       <div class="notification is-primary">
-                        <p class="is-size-4">
+                        <p class="is-size-3 is-center">
                           YouTube Summons You
                           <figure class="image is-16by9" id="youtube-video">
                             
