made HTML change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>The Curious Amateur</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
-    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma-rtl.css" integrity="sha512-I6081wbkOhUzrW0pbGj2RxCnnCVqUDxQQE/PZq1WmvRSPlZ/2p6h1XbEnhFH4IqF759e10t+IuHjcs0ZYx9NWA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma-rtl.css" integrity="sha512-I6081wbkOhUzrW0pbGj2RxCnnCVqUDxQQE/PZq1WmvRSPlZ/2p6h1XbEnhFH4IqF759e10t+IuHjcs0ZYx9NWA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <style>
       .center {
         display: block;
