scroll features, changed ducks again

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 </head>
 <body> 
 <section class="hero is-small has-background-black">
-  <img class="galaxy" src="./Assets/Images/starfall-gif.gif">
 	<div class="hero-body">
     <div class="container1">
       <figure id="banner" class="image is-128x128">
         <h1 class="team">The Cosmic Ducks Presents:</h1>
-        <img class= "hero-logo is-rounded" src="./Assets/Images/dazedduck.gif">
+        <img class= "hero-logo is-rounded" src="./Assets/Images/pilot.gif">
         <img class="hero-logo2 is-rounded" src="./Assets/Images/cosmicduck.gif">
         <img class="hero-logo3 is-rounded" src="./Assets/Images/fcosmicduck (1).gif">
       </figure>
@@ -58,11 +57,9 @@
                   </div>
                   <div class="column is-half">
                       <div class="notification is-primary">
-
-                        <p class="is-size-4">YouTube Videos</p>
+                        <p class="is-center is-size-4">YouTube Videos</p>
                           <figure class="videowindow" id="youtube-video">
-                            
-                          </figure>
+                            </figure>
                       </div>
                     </div>
                   <div class="column">                    
@@ -70,7 +67,7 @@
                       <p class="is-size-3">
                       Wikipedia Info Box
                       <div class="card">
-                        <div class="card-content">
+                        <div id="wikibox" class="card-content">
                           <p class="title is-size-4" id = "wiki-title">
                             
                           </p>
