added new look background

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <style>
       .center {
         display: block;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
       }
     </style>
@@ -51,7 +51,7 @@
                       </div>
                     </div>
                   </p>
-                    <div id = "search-history-box">  
+                    <div id ="search-history-box">  
                     </div>
                     </div>
                   </div>
