--- a/index.html
+++ b/index.html
@@ -9,20 +9,13 @@
     <title>The Curious Amateur</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma-rtl.css" integrity="sha512-I6081wbkOhUzrW0pbGj2RxCnnCVqUDxQQE/PZq1WmvRSPlZ/2p6h1XbEnhFH4IqF759e10t+IuHjcs0ZYx9NWA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-   <style>
-      .center {
-        display: block;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
 </head>
 <body> 
 <section class="hero is-small has-background-black">
 	<div class="hero-body">
     <div class="container1">
       <figure id="banner" class="image is-128x128">
-        <h1 class="team">The Cosmic Ducks Presents:</h1>
+        <h1 class="team">Cosmic Ducks Presents:</h1>
         <img class= "hero-logo is-rounded" src="./Assets/Images/pilot.gif">
         <img class="hero-logo2 is-rounded" src="./Assets/Images/cosmicduck.gif">
         <img class="hero-logo3 is-rounded" src="./Assets/Images/fcosmicduck (1).gif">
@@ -31,7 +24,7 @@
       </div>
     </div>
 </section>
-      <section class="section has-background-light">
+      <section class="section has-background-black">
           <div class="container2">
              <div class="columns">
                 <div class="column is-one-quarter">
@@ -44,10 +37,10 @@
                         <input class="input" type="text" id = "searchInput" placeholder="enter your keywords">
                       </div>
                       <div class="control">
-                        <a class="button is-small is-rounded is-info" id = "search-btn">
+                        <a class="button is-rounded is-info" id = "search-btn">
                           Search
                         </a>
-                        <button id= "clear-btn" class="button is-small is-warning is-dark">Clear History</button>
+                        <button id= "clear-btn" class="button is-warning is-dark">Clear History</button>
                       </div>
                     </div>
                   </p>
@@ -57,13 +50,13 @@
                   </div>
                   <div class="column is-half">
                       <div class="notification is-primary">
-                        <p class="is-center is-size-4">YouTube Videos</p>
+                        <p class="has-text-centered is-size-4">YouTube Videos</p>
                           <figure class="videowindow" id="youtube-video">
                             </figure>
                       </div>
                     </div>
                   <div class="column">                    
-                    <div class="notification is-info">
+                    <div class="notification has-text-centered is-info">
                       <p class="is-size-3">
                       Wikipedia Info Box
                       <div class="card">
