--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>The Curious Amateur</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma-rtl.css" integrity="sha512-I6081wbkOhUzrW0pbGj2RxCnnCVqUDxQQE/PZq1WmvRSPlZ/2p6h1XbEnhFH4IqF759e10t+IuHjcs0ZYx9NWA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
 </head>
 <body> 
-<section class="hero is-small has-background-black">
+<section class="hero is-small">
 	<div class="hero-body">
     <div class="container1">
       <figure id="banner" class="image is-128x128">
-        <h1 class="team">Cosmic Ducks Presents:</h1>
+        <h1 class="team" src="./Assets/Images/">Cosmic Ducks Presents:</h1>
         <img class= "hero-logo is-rounded" src="./Assets/Images/pilot.gif">
         <img class="hero-logo2 is-rounded" src="./Assets/Images/cosmicduck.gif">
         <img class="hero-logo3 is-rounded" src="./Assets/Images/fcosmicduck (1).gif">
