--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 <section class="hero is-small">
 	<div class="hero-body">
     <div class="container1">
-      <figure id="banner" class="image is-128x128">
-        <h1 class="team" src="./Assets/Images/">Cosmic Ducks Presents:</h1>
+      <figure id="banner" class="image is-96x96">
         <img class= "hero-logo is-rounded" src="./Assets/Images/pilot.gif">
         <img class="hero-logo2 is-rounded" src="./Assets/Images/cosmicduck.gif">
         <img class="hero-logo3 is-rounded" src="./Assets/Images/fcosmicduck (1).gif">
       </figure>
-      </figure>
+      </div>
+      <div class="team-logo">
+        <figure id="team-logo"  class="image is-16x9">
+          <img class="thecdlogo" src="./Assets/Images/thecosmicduckslogo.png">
+        </figure>
       </div>
     </div>
 </section>
