--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
           <div class="container2">
              <div class="columns">
                 <div class="column is-one-quarter">
-                    <div class="notification is-danger">
+                    <div class="notification is-warning">
                       <h2 class="title"></h2>
-                      <p class="is-size-4">
+                      <p class="is-size-3">
                      Quick Search:
                      <div class="field has-addon">
                       <div class="control">
                         <input class="input" type="text" id = "searchInput" placeholder="enter your keywords">
                       </div>
                       <div class="control">
-                        <a class="button is-rounded is-info" id = "search-btn">
+                        <a class="button is-rounded is-link" id = "search-btn">
                           Search
                         </a>
-                        <button id= "clear-btn" class="button is-warning is-dark">Clear History</button>
+                        <button id= "clear-btn" class="button is-danger is-dark">Clear History</button>
                       </div>
                     </div>
                   </p>
@@ -53,7 +53,7 @@
                   </div>
                   <div class="column is-half">
                       <div class="notification is-primary">
-                        <p class="has-text-centered is-size-4">YouTube Videos</p>
+                        <p class="has-text-centered is-size-2">YouTube Videos</p>
                           <figure class="videowindow" id="youtube-video">
                             </figure>
                       </div>
