--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
         <img class="hero-logo3 is-rounded" src="./Assets/Images/fcosmicduck (1).gif">
       </figure>
       </div>
-      <div class="team-logo">
-        <figure id="team-logo"  class="image is-16x9">
+      <div class="team-logo" class="image is-16x9">
           <img class="thecdlogo" src="./Assets/Images/thecosmicduckslogo.png">
-        </figure>
-      </div>
     </div>
+   </div>
 </section>
       <section class="section has-background-black">
           <div class="container2">
